# OpenCut

./: Cargo.toml  capacitor.config.ts  package.json  supabaseSchema.sql
.github/workflows/: android-build.yml  react-native-android.yml
.next/: trace  trace-build
.next/cache/: config.json
android/: settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
apps/mobile/: App.tsx  IMPLEMENTATION_PROGRESS.md  package.json  tsconfig.json
apps/mobile/ios/mobile/: Info.plist
apps/mobile/src/: App.tsx
apps/mobile/src/components/: AudioWaveformView.tsx  ExampleButton.tsx  ExportProgressOverlay.tsx  PreviewPlayer.tsx  TimelineClip.tsx  TimelineControls.tsx  TimelineRuler.tsx  TimelineTrack.tsx
apps/mobile/src/navigation/: AppNavigator.tsx
apps/mobile/src/screens/: HomeScreen.tsx  TimelineScreen.tsx
apps/mobile/src/services/: audioMixerService.ts  ffmpeg.ts  mediaPickerService.ts  mediaProcessor.ts  storageService.ts  supabase.ts
apps/mobile/src/store/: projectStore.ts  useAppStore.ts  usePlayheadStore.ts  useTimelineStore.ts
apps/mobile/src/utils/: time.ts
apps/web/: next.config.ts  package.json
apps/web/src/actions/: keybinding.ts  types.ts
apps/web/src/app/: layout.tsx
apps/web/src/components/: capacitor-init.tsx
apps/web/src/env/: web.ts
apps/web/src/hooks/: useSubscription.ts
apps/web/src/lib/: capacitor-init.ts
ios/App/: Podfile
src-native/video_bridge/: Cargo.toml
src-native/video_bridge/src/: lib.rs
src/lib/video/: VideoBridge.ts  video-bridge.worker.ts
(+7 files in other folders)
